Finished up login functionality and squashed nested link bug

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -1,6 +1,6 @@
 // $headings-font-family: Garamond;
 // $body-bg: #FFEABE;
-$navbar-light-color: #FFEABE;
+$navbar-light-color: #F2BFBF;
 $primary: #F2BFBF;
 $link-hover-color: darken($primary, 15%);
 $font-family-base: Garamond;
